fixed null=True in models and added a check in product description templates

--- a/my_shop/templates/shop_app/product-details.html
+++ b/my_shop/templates/shop_app/product-details.html
@@ -187,7 +187,7 @@
                         <div class="product_info">
                                     <span class="sku_wrapper">
                                         <span class="title">Tredemark:</span>
-                                        <span class="sku">{{product.tredemark}}</span>
+                                        <span class="sku">{{product.trademark }}</span>
                                     </span>
                             <span class="posted_in">
                                         <span class="title">Categories:</span>
