--- a/my_shop/templates/shop_app/shop.html
+++ b/my_shop/templates/shop_app/shop.html
@@ -22,6 +22,7 @@
                             <span>({{ profile.count_product_in_cart }} Item in Cart)</span>
                         </div>
                     </li>
+                {% if description %}
                     {% for product, desc in cart.products_in_the_cart.all|zip:description %}
 
                         <li>
@@ -76,6 +77,7 @@
                     </li>
                 </ul>
             </div>
+        {% endif %}
         </div>
     </div>
 {% endblock %}
