--- a/my_shop/templates/shop_app/base.html
+++ b/my_shop/templates/shop_app/base.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="{% static 'assets/css/backtotop.css' %}">
     <link rel=" stylesheet
     " href="{% static 'assets/css/magnific-popup.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/nice-select.css' %}">
+    <link rel="stylesheet" type="text/html" href="{% static 'assets/css/nice-select.css' %}">
     <link rel="stylesheet" href="{% static 'assets/flaticon/flaticon.css' %}">
     <link rel="stylesheet" href="{% static 'assets/css/font-awesome-pro.css' %}">
     <link rel="stylesheet" href="{% static 'assets/css/default.css' %}">
